--- a/src/ui.html
+++ b/src/ui.html
@@ -1949,6 +1949,49 @@
             }
         };
 
+        /**
+         * Converte um Blob de imagem para WebP com compressão
+         * @param {Blob} blob - Blob da imagem original
+         * @param {number} quality - Qualidade de compressão (0.1 a 1.0)
+         * @returns {Promise<Blob>} - Blob da imagem WebP
+         */
+        function convertToWebP(blob, quality) {
+            return new Promise((resolve, reject) => {
+                const img = new Image();
+                const canvas = document.createElement('canvas');
+                const ctx = canvas.getContext('2d');
+
+                img.onload = () => {
+                    // Definir dimensões do canvas
+                    canvas.width = img.width;
+                    canvas.height = img.height;
+
+                    // Desenhar imagem no canvas
+                    ctx.drawImage(img, 0, 0);
+
+                    // Converter para WebP com qualidade especificada
+                    canvas.toBlob(
+                        (webpBlob) => {
+                            if (webpBlob) {
+                                resolve(webpBlob);
+                            } else {
+                                reject(new Error('Falha ao converter para WebP'));
+                            }
+                        },
+                        'image/webp',
+                        quality
+                    );
+                };
+
+                img.onerror = () => {
+                    reject(new Error('Falha ao carregar imagem para conversão'));
+                };
+
+                // Carregar blob como URL de dados
+                img.src = URL.createObjectURL(blob);
+            });
+        }
+
         async function uploadImageToWordPress(data) {
             const wpUrl = document.getElementById('wp-url').value;
             const wpUser = document.getElementById('wp-user').value;
@@ -1961,11 +2004,36 @@
             }
 
             try {
-                // Converter Uint8Array para Blob
-                const blob = new Blob([data.data], { type: data.mimeType });
+                // Obter qualidade configurada no modal
+                const qualityInput = document.getElementById('quality');
+                const quality = qualityInput ? parseFloat(qualityInput.value) : 0.85;
+                console.log(`🎨 Qualidade de compressão: ${Math.round(quality * 100)}%`);
+
+                // Converter Uint8Array para Blob original
+                const originalBlob = new Blob([data.data], { type: data.mimeType });
+
+                // Converter para WebP com compressão
+                let finalBlob = originalBlob;
+
+                if (data.targetMimeType === 'image/webp' && data.needsConversion) {
+                    console.log('🔄 Convertendo para WebP...');
+                    try {
+                        finalBlob = await convertToWebP(originalBlob, quality);
+                        console.log(`✅ Conversão WebP concluída. Tamanho: ${(finalBlob.size / 1024).toFixed(2)} KB`);
+                    } catch (conversionError) {
+                        console.warn('⚠️ Falha na conversão WebP, usando formato original:', conversionError);
+                        finalBlob = originalBlob;
+                    }
+                }
+
                 const formData = new FormData();
-                formData.append('file', blob, data.name);
-                formData.append('title', data.name.split('.')[0]);
+                // Ajustar nome do arquivo para .webp se foi convertido
+                const fileName = finalBlob.type === 'image/webp'
+                    ? data.name.replace(/\.(png|jpg|jpeg)$/i, '.webp')
+                    : data.name;
+
+                formData.append('file', finalBlob, fileName);
+                formData.append('title', fileName.split('.')[0]);
 
                 const response = await fetch(`${wpUrl}/wp-json/wp/v2/media`, {
                     method: 'POST',
